fixed z-index on Floating Circles

--- a/sass/theme/sections/blocks/floating-circles.scss
+++ b/sass/theme/sections/blocks/floating-circles.scss
@@ -1,6 +1,6 @@
 .floating__circles{
     position:absolute;
-    z-index:2;
+    z-index:2 !important;
     *{
         border-radius:100%;
         position:absolute;
